--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project1"
         tools:targetApi="31">
+        <receiver
+            android:name=".NotificationReceiver"
+            android:exported="true">
+        </receiver>
+
         <activity
             android:name=".HomeActivity"
             android:exported="false">
